argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: okaygeniecust-app-application
  name: ingress-cust
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: apiv8.localginie.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: okaygeniecust
                port:
                  number: 80
